AliyunDrive4j 003 （1）新增阿里云文件服务 （2）新增阿里云Http基础配置 （3）新增测试信息 （4）新增扫码登录二维码获取与检测服务

--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,18 @@
     <dependencies>
         <dependency>
             <groupId>com.ejlchina</groupId>
-            <artifactId>okhttps-jackson</artifactId>
+            <artifactId>okhttps-gson</artifactId>
             <version>${okhttp-version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
