--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 sign_out=/sign/out
+qrcode_get=https://passport.aliyundrive.com/newlogin/qrcode/generate.do?appName=aliyun_drive&fromSite=52&appName=aliyun_drive&appEntrance=web
+qrcode_status=https://passport.aliyundrive.com/newlogin/qrcode/query.do?appName=aliyun_drive
+main_host=https://aliyundrive.com/
+sign_in=https://aliyundrive.com/sign/in
+mini_sign_in=https://passport.aliyundrive.com/mini_login.htm?lang=zh_cn&appName=aliyun_drive
+token_login=https://auth.aliyundrive.com/v2/oauth/token_login
+token_get=https://api.aliyundrive.com/token/get
+token_refresh=https://api.aliyundrive.com/token/refresh
