AliyunDrive4j 009 （1）The Alibaba Cloud disk-user interface has been updated, and the subsequent interfaces are being updated gradually.阿里云盘用户接口已经更新，后续界面正在逐步更新 （2）I wanted to wait until the official API arrived, but it seems that the official only limited the download interface, so I'd better write the rest first.本想等到官方提供的API到了再继续写，但是好像官方只是限制了下载接口，所以我还是先把其他的写了吧

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ mini_sign_in=https://passport.aliyundrive.com/mini_login.htm?lang=zh_cn&appName=
 token_login=https://auth.aliyundrive.com/v2/oauth/token_login
 token_get=https://api.aliyundrive.com/token/get
 token_refresh=https://api.aliyundrive.com/token/refresh
+user_capacity_details=https://api.aliyundrive.com/adrive/v1/user/capacityDetails
