AliyunDrive4j 010 （1）The information query interface used by the new user's network disk;新增用户网盘已使用信息查询接口； （2）Query the network disk capacity of new users;新增用户网盘容量查询；

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-sign_out=/sign/out
-qrcode_get=https://passport.aliyundrive.com/newlogin/qrcode/generate.do?appName=aliyun_drive&fromSite=52&appName=aliyun_drive&appEntrance=web
-qrcode_status=https://passport.aliyundrive.com/newlogin/qrcode/query.do?appName=aliyun_drive
-main_host=https://aliyundrive.com/
-sign_in=https://aliyundrive.com/sign/in
-mini_sign_in=https://passport.aliyundrive.com/mini_login.htm?lang=zh_cn&appName=aliyun_drive
+sign_out=https://api.aliyundrive.com/v2/sign/out
 token_login=https://auth.aliyundrive.com/v2/oauth/token_login
 token_get=https://api.aliyundrive.com/token/get
-token_refresh=https://api.aliyundrive.com/token/refresh
+token_refresh=https://auth.aliyundrive.com/v2/account/token
 user_capacity_details=https://api.aliyundrive.com/adrive/v1/user/capacityDetails
+user_already_in_used_capacity=https://api.aliyundrive.com/adrive/v1/user/driveCapacityDetails
+#drive part
+drive_list=https://api.aliyundrive.com/v2/drive/list_my_drives
