AliyunDrive4j 015 （1）新增文件夹查询API； （2）新增文件夹删除API； （3）新增文件夹修改API；

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,11 @@ drive_default=https://api.aliyundrive.com/v2/drive/get_default_drive
 drive_getDriveInfoByDriveId=https://api.aliyundrive.com/v2/drive/get
 #folder part
 folder_create=https://api.aliyundrive.com/adrive/v2/file/createWithFolders
+folder_delete=https://api.aliyundrive.com/v2/recyclebin/trash
+folder_update=https://api.aliyundrive.com/v3/file/update
+folder_get=https://api.aliyundrive.com/adrive/v3/file/list?jsonmask=next_marker,items(name,file_id,drive_id,type,size,created_at,updated_at,category,file_extension,parent_file_id,mime_type,starred,thumbnail,url,streams_info,content_hash,user_tags,user_meta,trashed,video_media_metadata,video_preview_metadata,sync_meta,sync_device_flag,sync_flag,punish_flag)
+#file part
+file_upload=
+file_upload_multi=
+file_download_single=
+file_download_multi=
