AliyunDrive4j 016 （1）同步更新阿里云盘最新File文件API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ file_upload=
 file_upload_multi=
 file_download_single=
 file_download_multi=
+file_get_info_by_id=https://api.aliyundrive.com/v2/file/get
