--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#common
+host=https://www.aliyundrive.com
+#login
 sign_out=https://api.aliyundrive.com/v2/sign/out
 token_login=https://auth.aliyundrive.com/v2/oauth/token_login
 token_get=https://api.aliyundrive.com/token/get
@@ -19,3 +22,6 @@ file_upload_multi=
 file_download_single=
 file_download_multi=
 file_get_info_by_id=https://api.aliyundrive.com/v2/file/get
+#session
+create_new_session=https://api.aliyundrive.com/users/v1/users/device/create_session
+
