AliyunDrive4j 020 （1）同步更新阿里云盘请求算法

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,5 @@ file_download_multi=
 file_get_info_by_id=https://api.aliyundrive.com/v2/file/get
 #session
 create_new_session=https://api.aliyundrive.com/users/v1/users/device/create_session
+renew_new_session=https://api.aliyundrive.com/users/v1/users/device/renew_session
 
