AliyunDrive4j 024 （1）更新阿里云盘-文件下载接口 （2）优化deviceId生成策略 （3）优化nonce计算方式 （4）优化sing-nature计算 （5）修改了常量数据

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,7 @@ folder_get=https://api.aliyundrive.com/adrive/v3/file/list?jsonmask=next_marker,
 #file part
 file_upload=
 file_upload_multi=
+file_download_info_get=https://api.aliyundrive.com/v2/file/get_download_url
 file_download_single=
 file_download_multi=
 file_update_info_by_id=https://api.aliyundrive.com/v3/file/update
