AliyunDrive4j 027 （1）更新阿里云盘文件删除接口； （2）更新阿里云盘文件夹删除接口；

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,14 +17,14 @@ folder_delete=https://api.aliyundrive.com/v2/recyclebin/trash
 folder_update=https://api.aliyundrive.com/v3/file/update
 folder_get=https://api.aliyundrive.com/adrive/v3/file/list?jsonmask=next_marker,items(name,file_id,drive_id,type,size,created_at,updated_at,category,file_extension,parent_file_id,mime_type,starred,thumbnail,url,streams_info,content_hash,user_tags,user_meta,trashed,video_media_metadata,video_preview_metadata,sync_meta,sync_device_flag,sync_flag,punish_flag)
 #file part
-file_upload=
-file_upload_multi=
 file_download_info_get=https://api.aliyundrive.com/v2/file/get_download_url
-file_download_single=
-file_download_multi=
 file_list_get=https://api.aliyundrive.com/adrive/v3/file/list?jsonmask=next_marker%2Citems(name%2Cfile_id%2Cdrive_id%2Ctype%2Csize%2Ccreated_at%2Cupdated_at%2Ccategory%2Cfile_extension%2Cparent_file_id%2Cmime_type%2Cstarred%2Cthumbnail%2Curl%2Cstreams_info%2Ccontent_hash%2Cuser_tags%2Cuser_meta%2Ctrashed%2Cvideo_media_metadata%2Cvideo_preview_metadata%2Csync_meta%2Csync_device_flag%2Csync_flag%2Cpunish_flag)
 file_update_info_by_id=https://api.aliyundrive.com/v3/file/update
 file_get_info_by_id=https://api.aliyundrive.com/v2/file/get
+file_delete_id=https://api.aliyundrive.com/v2/recyclebin/trash
+file_upload=
+file_upload_multi=
+file_download_multi=
 #session
 create_new_session=https://api.aliyundrive.com/users/v1/users/device/create_session
 renew_new_session=https://api.aliyundrive.com/users/v1/users/device/renew_session
